<resources>
    <string name="app_name">Assignment1</string>
    <string name="app_name2">BeerPager</string>
    <string name="app_name3">BMI</string>
    <string name="bmi_summary_normal">Your weight is normal</string>
    <string name="bmi_summary_overweight">You are overweight</string>
    <string name="bmi_summary_underweight">You are underweight</string>
    <string name="bmi_value">0.0</string>
    <string name="icon_label">BMI</string>
    <string name="add_weight">Add weight</string>
    <string name="add_height">Add height</string>
    <string name="app_name4">Vaxjo Weather</string>
    <string name="settings">Settings</string>
    <string name="summary_sunny">CLEAR</string>
    <string name="summary_partly_cloudy">PARTLY CLOUDY</string>
    <string name="summary_cloudy">CLOUDY</string>
    <string name="summary_rainy">RAINY</string>
    <string name="summary_snow">SNOW</string>
    <string name="test_temp">20</string>
    <string name="test_summary">Rainy</string>
    <string name="loacation">VÄXJÖ,KRONOBERG</string>
    <string name="test_rain">0.4mm</string>
    <string name="test_daynr">30</string>
    <string name="test_day">MON</string>
    <string name="test_time">08:00 - 10:00</string>
    <string name="date_today">TODAY</string>
    <string name="network_unavailable_message">Network is unavailable</string>
    <string name="app_name5">My Countries</string>
    <string name="add_country_label">Add country:</string>
    <string name="add_year_label">year:</string>
    <string name="button_text">Add Country</string>
    <string name="conutry_danmak">Danmark</string>
    <string name="year_danmak">2005</string>
    <string name="Welcom_text">To add countries press </string>
    <string name="alert_Year">Enter a Vaild Year</string>
    <string name="alert_msg">Enter a vaild  year and country</string>
    <string name="alert_title">Erorr!</string>
    <string name="country_label">Country</string>
    <string name="year_label">Year</string>
    <string name="mornin_delight">Mornin\' Delight</string>
    <string name="good_morning">Good Morning</string>
    <string name="pliny_the_younger">Pliny The Younger</string>
    <string name="heady_topper">Heady Topper</string>
    <string name="kentucky_brunch_brand_stout">Kentucky Brunch Brand Stout</string>
    <string name="pliny_the_elder">Pliny The Elder</string>
    <string name="norrlands_guld_export">Norrlands Guld Export</string>
    <string name="random_number">100</string>

</resources>
