<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#4B576B">



    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/list"
        android:layout_below="@id/countryInput"
        android:layout_marginTop="50dp"
        android:dividerHeight="1dp">

    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/myLinear"

        android:background="#d2d2d2"
        android:layout_marginTop="10dp"
       >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country_label"
            android:layout_marginLeft="10dp"
            android:textColor="#000000"
            android:textSize="30sp"
            android:id="@+id/countryListLabel"
            android:layout_weight="1"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year_label"
            android:textSize="30sp"
            android:layout_marginRight="5dp"
            android:textColor="#000000"
            />






    </LinearLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/Welcom_text"
        android:textSize="28sp"
        android:id="@+id/welcomeLabel"
        android:layout_marginTop="5dp"
        android:textColor="#ffffffff"
        android:paddingLeft="85dp"
       >


        </TextView>

   <ImageView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:src="@drawable/level_up"
       android:id="@+id/iconImageView"
       android:layout_alignTop="@+id/welcomeLabel"
       android:layout_toEndOf="@+id/welcomeLabel"
       android:layout_alignBottom="@+id/welcomeLabel"/>




</RelativeLayout>
