<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addHeightLabel"
            android:text="@string/add_height"
            android:textSize="18sp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="5dp"
            android:textColor="#000000"

            />


     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/addHeightLabel"
         android:id="@+id/heightInput"
         android:inputType="numberDecimal"
/>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/adWeightLabel"
            android:text="@string/add_weight"
            android:layout_below="@id/heightInput"
            android:textSize="18sp"
            android:layout_marginTop="18dp"
            android:layout_marginLeft="5dp"
            android:textColor="#000000"/>



        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/adWeightLabel"
            android:id="@+id/weightInput"
            android:inputType="numberDecimal"
            />







        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:id="@+id/buttonContainer"
            android:layout_below="@id/weightInput">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="50"


                android:showDividers="middle">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="calculate"
                    android:id="@+id/calcButton"
                    android:layout_gravity="center_horizontal"
                    android:background="#21CE99"
                    android:elevation="5dp"
                    android:textColor="#ffffffff"
                   />
            </LinearLayout>

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:orientation="vertical"
                >

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="reset"
                    android:id="@+id/resetButton"
                    android:textColor="#ffffff"
                    android:background="#21CE99"
                    android:elevation="5dp"/>
            </LinearLayout>
        </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bmiLabel"
        android:textSize="60sp"
        android:text="@string/bmi_value"
        android:layout_below="@id/buttonContainer"
        android:layout_centerHorizontal="true"
        android:textColor="#21CE99"
        android:layout_marginTop="30dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmi_summary_normal"
        android:id="@+id/summaryLabel"
        android:layout_below="@+id/bmiLabel"
        android:layout_centerHorizontal="true"
        android:textColor="#21CE99"
        android:layout_marginTop="20dp"
        android:textSize="18sp"/>






</RelativeLayout>

